@@ -36,6 +36,7 @@ Version 1.3.12+svn:
   * Miscellaneous and bug fixes
     * Replaced the 'Binary Saves' option with 'Compressed Saves' and now
       writes gzip files.
+    * Load the recall list with a start of scenario save.
 
 Version 1.3.12:
   * campaigns
